--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,33 +14,10 @@
 }
 @keyframes animateleft{from{left:-300px;opacity:0} to{left:0;opacity:1}}
 
-.side-bar-hidden {
+/*.side-bar-hidden {
   display: none;
 }
-
-.side-bar-control {
-  padding-top: 60px;
-  width: 100%;
-}
-
-.side-bar-control-btn {
-  padding-left: 80%;
-}
-
-.side-bar-control-btn span {
-  font-size: 15px;
-  font-weight: 500;
-  color: #9B9B9B;
-}
-
-.side-bar-control-btn span:hover {
-  color: #177EF5;
-}
-
-.side-bar-control-btn span:active {
-  color: #177EF5;
-}
-
+*/
 .side-bar {
   width: 100%;
 }
