--- a/src/components/Landing/components/SignIn/SignIn.css
+++ b/src/components/Landing/components/SignIn/SignIn.css
@@ -1,9 +1,4 @@
-.signin-container {
-  margin: 0;
-  padding: 0;
-}
-
-.signin-session {
+.signin {
   padding: 7% 0 0 20%;
 }
 
@@ -14,7 +9,6 @@
 
 .signin-welcome-words p {
   margin: 7px 0;
-  padding: 0;
   font-weight: 600;
   line-height: 40px;
   font-size: 35px;
@@ -51,8 +45,6 @@
 
 .signin-form-row {
   width: 100%;
-  margin: 0;
-  padding: 0;
 }
 
 .signin-form-row-title {
@@ -69,18 +61,15 @@
   font-weight: 500;
   font-size: 18px;
   color: rgba(40,40,40, 0.9);
-  margin: 0;
   padding: 3.2% 3%;
   width: 94%;
   background-color: rgba(0, 0, 0,0.1);
-  outline: none;
   border: 0px;
   border-radius: 6px;
 }
 
 .signin-form-submit {
   margin: 50px 0 10px 0;
-  padding: 0;
   width: 100%;
   text-align: right;
   display: flex;
@@ -93,11 +82,9 @@
   font-size: 16px;
   line-height: 20px;
   color: rgba(62,62,62, 0.9);
-  margin: 0;
   padding: 3.2% 0;
   width: 147px;
   background-color: rgba(80, 227, 194,1);
-  outline: none;
   border: 0px;
   border-radius: 21px;
   box-shadow: 2px 4px 10px 0 rgba(0,0,0, 0.3);
@@ -110,7 +97,6 @@
 
 .signin-form-alarm {
   margin: 10px 0;
-  padding: 0;
   width: 100%;
   text-align: right;
   display: flex;
@@ -124,7 +110,6 @@
   letter-spacing: 1px;
   color: rgba(70,70,70 ,1);
   margin: 0 5px;
-  padding: 0;
 }
 
 .signin-form-alarm-btn {
@@ -133,5 +118,4 @@
   letter-spacing: 0.1px;
   color: rgba(73, 199, 170,1);
   margin: 0 5px;
-  padding: 0;
 }
