--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,4 +1,4 @@
-.landing-container {
+.landing {
   margin: 0;
   width: 100%;
   height: 100%;
@@ -10,9 +10,7 @@
   position: fixed;
   right: 0;
   top: 0;
-  padding: 0;
   width: 100%;
-  margin: 0;
   z-index: 100;
   background-color: rgba(82, 154, 230,1);
   transition: 0.5s ease;
