--- a/src/components/Landing/components/Switcher/Switcher.css
+++ b/src/components/Landing/components/Switcher/Switcher.css
@@ -1,14 +1,13 @@
 .switcher-nav {
-  margin: 2% 0 2% 70%;
+  margin: 2%;
   display: flex;
-  width: 100%;
+  justify-content: flex-end;
 }
 
 .seperate-line {
   width: auto;
   height: 18px;
   margin: 2px 10px 0 10px;
-  padding: 0;
 }
 
 .switch-on {
@@ -17,7 +16,6 @@
   letter-spacing: 1.4px;
   color: rgba(255,255,255,1);
   margin: 0 15px;
-  padding: 0;
   cursor: pointer;
 }
 
@@ -31,7 +29,6 @@
   letter-spacing: 1.4px;
   color: rgba(70,70,70,1);
   margin: 0 15px;
-  padding: 0;
   cursor: pointer;
 }
 
