--- a/src/Rwd.css
+++ b/src/Rwd.css
@@ -162,7 +162,7 @@
   }
 
   .journeys-list-wrapper {
-    padding-top: 90px;
+    padding-top: 48px;
   }
 }
 
@@ -191,32 +191,14 @@
   }
 }
 
-@media screen and (min-width: 1048px) and (max-width: 1260px) {
-  .side-bar-wrapper {
-    z-index: 10000;
-    position: absolute;
-    width: 35%;
-    min-width: 292px;
-    max-width: 350px;
-    box-shadow: 4px 0px 10px 0 rgba(0,0,0, 0.2);
-  }
-}
-
-@media screen and (max-width: 987px) {
-  .side-bar-wrapper {
-    z-index: 10000;
-    position: absolute;
-    width: 35%;
-    min-width: 292px;
-    max-width: 350px;
-    box-shadow: 4px 0px 10px 0 rgba(0,0,0, 0.2);
-  }
-}
-
 @media screen and (max-width: 1260px) {
   .side-bar-wrapper {
     width: 35%;
     min-width: 292px;
+    max-width: 350px;
+    position: fixed;
+    z-index: 10000;
+    box-shadow: 4px 0px 10px 0 rgba(0,0,0, 0.2);
   }
 
   .accounts-nav {
@@ -761,5 +743,4 @@
     margin-left: 10px;
     width: 45%;
   }
-
 }
