--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -11,7 +11,6 @@
   top: 40px;
   animation: animateleft 0.4s;
   display: block;
-  box-shadow: 4px 0px 10px 0 rgba(0,0,0, 0.1);
 }
 
 @keyframes 
@@ -19,6 +18,10 @@
     from {left:-300px; opacity:0} 
     to {left:0; opacity:1}
   }
+
+.hidden {
+  display: none;
+}
 
 .side-bar {
   width: 100%;
@@ -125,10 +128,6 @@
   width: 9px;
 }
 
-.days-selector-hidden {
-  display: none;
-}
-
 .days-selector-wrapper {
   position: absolute;
   z-index: 1000;
@@ -226,16 +225,4 @@
 .cancel-btn-img {
   width: 10px;
   margin: 0 2px;
-}
-
-.web-info {
-  font-weight: 500;
-  color: rgba( 62, 62, 62,1);
-  font-size: 13px;
-  letter-spacing: 2px;
-  padding: 0 0 4% 5%;
-}
-
-.footer {
-  background-color: #f9f9f9;
 }
