--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -15,3 +15,15 @@
   background-color: rgba(82, 154, 230,1);
   transition: 0.5s ease;
 }
+
+.web-info-wrapper {
+  height: 28px;
+  padding: 25px 20px 18px 20px;
+}
+
+.web-info {
+  font-weight: 500;
+  color: rgba(62,62,62, 1);
+  font-size: 13px;
+  margin: 25px 10px 10px 10px;
+}
