--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,15 @@
-@import url('https://fonts.googleapis.com/css?family=Noto+Sans+TC');
-
+/*initial setting*/
 html, body, #root {
   height: 100%;
   width: 100%;
 }
 
 body {
-  padding: 0;
   margin: 0;
   font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Noto Sans TC",
-    "sans-serif";
+  font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Segoe UI",
+    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", 
+    "Helvetica Neue", Helvetica, arial, "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -22,22 +20,17 @@ header {
   left: 0;
   top: 0;
   width: 100%;
-  background-color: #fff;
+  background-color: #FFF;
   box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.1);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    'monospace';
-}
-
 p {
-	padding: 0;
 	margin: 0;
 }
 
 ul {
 	list-style: none;
+  padding: 0;
 }
 
 button {
@@ -49,7 +42,7 @@ button {
 	cursor: pointer;
 	text-align: center;
 	text-decoration: none;
-	transition: background 250ms ease-in-out, transfrom 150ms ease;
+	transition: background 250ms ease-in-out, transform 150ms ease;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
