--- a/src/components/Home/components/Days/Days.css
+++ b/src/components/Home/components/Days/Days.css
@@ -1,15 +1,20 @@
 .days-option-btn {
-  color: #3E3E3E;
   font-size: 16px;
   font-weight: 400;
-  text-align: center;
   letter-spacing: 1px;
-  padding: 4px 10px;
+  color: #3E3E3E;
+  text-align: center;
   width: 100%;
+  padding: 10px 10px;
   transition: 0s;
 }
 
 .days-option-btn:hover {
-  background-color: #177EF5;
   color: #FFF;
+  background-color: #177EF5;
+}
+
+.days-option-btn:active {
+  color: #FFF;
+  background-color: #177EF5;
 }
