--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,6 +1,112 @@
+/*share css*/
+.hidden {
+  display: none;
+}
+
+.home-title {
+  font-weight: 400;
+  font-family: "Ubuntu";
+  letter-spacing: 1px;
+  color: #3E3E3E;
+  margin: 12px 15px;
+}
+
+.home-subtitle {
+  font-weight: 600;
+  font-family: "Ubuntu";
+  color: #3E3E3E;
+  text-transform: capitalize;
+  margin: 12px 15px;
+}
+
+/*in SideBar & Accounts*/
+.show-add-btn {
+  color: #9B9B9B;
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  transition: 0s;
+}
+
+.show-add-btn:hover {
+  color: #177EF5;
+}
+
+.show-add-btn:active {
+  color: #177EF5;
+}
+
+.show-add-btn span {
+  letter-spacing: 0.2px;
+}
+
+.add-submit-input {
+  font-size: 13px;
+  letter-spacing: 1px;
+  color: #FFF;
+  min-width: 76px;
+  height: 36px;
+  margin: 6px 0;
+  padding: 0 13px;
+  border-radius: 8px;
+  background-color: #2D8AF5;
+  cursor: pointer;
+}
+
+.add-submit-input:active {
+  background-color: #196FD0;
+}
+
+/*in SideBar & StaticPannel & SetBudgets*/
+.cancel-btn {
+  width: 25px;
+  height: 25px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.cancel-btn:hover {
+  background-color: #DDD;
+}
+
+.cancel-btn-img {
+  width: 10px;
+  margin: 0 2px;
+}
+
+/*Home & List*/
+.delete-btn {
+  letter-spacing: 1px;
+  color: #9B9B9B;
+  padding: 2px 3px;
+}
+
+.delete-btn:hover {
+  color: #177EF5;
+}
+
+.delete-btn:active {
+  color: #177EF5;
+}
+
+.update-btn {
+  width: 25px;
+  height: 25px;
+  border-radius: 20px;
+}
+
+.add-icon-img, .select-icon-img,
+.update-icon-img {
+  width: 10px;
+  margin: 0 5px;
+}
+
+/*only in Home*/
 .home-container {
-  height: 100%;
   width: 100%;
+  height: 100%;
   display: flex;
 }
 
@@ -9,8 +115,8 @@
   background-color: #FFF;
   position: relative;
   top: 40px;
-  animation: animateleft 0.4s;
   display: block;
+  animation: animateleft 0.4s;
 }
 
 @keyframes 
@@ -19,54 +125,32 @@
     to {left:0; opacity:1}
   }
 
-.hidden {
-  display: none;
-}
-
 .side-bar {
   width: 100%;
 }
 
 .main-section {
+  width: 100%;
   margin-top: 40px;
   padding: 10px 0;
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-}
-
-.home-title {
-  font-weight: 400;
-  font-size: 15px;
-  letter-spacing: 1px;
-  font-family: "Ubuntu";
-  margin: 12px 15px;
-  color: #3E3E3E;
-}
-
-.home-subtitle {
-  font-weight: 600;
-  font-size: 15px;
-  font-family: "Ubuntu";
-  margin: 12px 15px;
-  color: #3E3E3E;
-  text-transform: capitalize;
 }
 
 .sub-section {
+  width: 100%;
+  background-color: #F9F9F9;
   display: flex;
   justify-content: center;
-  width: 100%;
-  background-color: #f9f9f9;
 }
 
 .minor-section {
+  width: 45%;
+  max-width: 600px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 45%;
-  max-width: 600px;
 }
 
 .accounts-wrapper {
@@ -87,8 +171,33 @@
 }
 
 .left-column ,.right-column {
-  margin-right: 15px;
+  margin-right: 13px;
   display: flex;
+}
+
+.add-day, .delete-day {
+  margin: 2px 6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.add-btn {
+  letter-spacing: 1px;
+  color: rgba( 62, 62, 62,0.8);
+  margin-left: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0s;
+}
+
+.add-btn:hover {
+  color: #177EF5;
+}
+
+.add-btn:active {
+  color: #9B9B9B;
 }
 
 .accounts-days {
@@ -105,18 +214,16 @@
 }
 
 .days-selector-btn {
+  margin: 0 10px;
   display: flex;
   justify-content: space-between;
-  background: none;
-  margin: 0 10px;
 }
 
 .days-name {
   font-size: 16px;
-  color: #3E3E3E;
   font-weight: 400;
-  letter-spacing: 1px;
   font-family: "Ubuntu";
+  letter-spacing: 1px;
   color: #3E3E3E;
 }
 
@@ -129,8 +236,6 @@
 }
 
 .days-selector-wrapper {
-  position: absolute;
-  z-index: 1000;
   border: 0px;
   border-radius: 12px;
   background-color: #FFF;
@@ -139,90 +244,14 @@
   min-width: 90px;
   max-width: 142px;
   padding: 2px 0;
+  position: absolute;
+  z-index: 1000;
 }
 
 .days-selector {
+  width: 100%;
+  padding: 10px 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 100%;
-  padding: 10px 0;
-}
-
-.control-day-group {
-  display: flex;
-}
-
-.delete-day, .add-day {
-  margin: 2px 0 0 5px;
-  padding: 2px 3px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.delete-btn {
-  font-size: 15px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  color: #9B9B9B;
-  background: none;
-}
-
-.delete-btn:hover {
-  color: #177EF5;
-  font-weight: 500;
-}
-
-.control-btn {
-  padding: 5px 2px;
-  background: none;
-  font-size: 15px;
-  font-weight: 500;
-  letter-spacing: 1px;
-  color: rgba( 62, 62, 62,0.8);
-  border-radius: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: 0s;
-}
-
-.control-btn:hover {
-  color: #177EF5;
-}
-
-.control-btn:active {
-  color: #9B9B9B;
-}
-
-.add-icon-img, .select-icon-img,
-.update-icon-img {
-  width: 10px;
-  margin: 0 5px;
-}
-
-.control-btn span {
-  margin-right: 5px;
-}
-
-.cancel-btn {
-  margin: 12px 3px;
-  width: 25px;
-  height: 25px;
-  background-color: none;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.cancel-btn:hover {
-  background-color: #DDD;
-  border-radius: 20px;
-}
-
-.cancel-btn-img {
-  width: 10px;
-  margin: 0 2px;
 }
