--- a/src/components/Home/components/SideBar/Journey/Journey.css
+++ b/src/components/Home/components/SideBar/Journey/Journey.css
@@ -1,30 +1,33 @@
 .journey {
 	width: 98%;
+	margin: 8px 0;
+	padding: 11px 0;
+	border-radius: 6px;
+	background-color: #FFF;
+	box-shadow: 3px 3px 7px 0px rgba(0,0,0, 0.1);
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 11px 0;
-	margin: 8px 0;
-	border-radius: 6px;
-	background-color: #fff;
-	box-shadow: 3px 3px 7px 0px rgba(0,0,0, 0.1);
 }
 
 .change-display-journey-btn {
-	margin: 0 15px;
-	cursor: pointer;
-	padding: 2px 0 2px 10px;
-	color: #3e3e3e;
 	font-weight: 400;
+	color: #3E3E3E;
+	margin: 0 15px;
+	padding: 2px 0 2px 10px;
 }
 
 .change-display-journey-btn:hover {
-	color: #177EF5;
 	font-weight: 500;
+	color: #177EF5;
+}
+
+.change-display-journey-btn:active {
+	font-weight: 500;
+	color: #9B9B9B;
 }
 
 .journey-name {
-	font-size: 15px;
 	font-family: "Ubuntu";
 	letter-spacing: 1px;
 }
@@ -36,16 +39,22 @@
 	align-items: center;
 }
 
+.journey-btn-group .update-btn {
+	margin-right: 8px;
+}
+
+.journey-btn-group .cancel-btn {
+	margin: 0 8px 0 0;
+}
+
 .update-journey-input {
-	font-weight: 500;
-	font-size: 15px;
 	color: #3E3E3E;
+	width: 63%;
+	margin-left: 12px;
+	padding: 8px 0 8px 10px;
 	border-radius: 6px;
 	border: 0px;
-	background-color: #f0f0f0;
-	padding: 8px 0 8px 10px;
-	margin-left: 12px;
-	width: 63%;
+	background-color: #F0F0F0;
 }
 
 .update-journey-input::placeholder {
@@ -54,6 +63,6 @@
 }
 
 .update-journey-input:focus {
-	 background-color: rgba(0, 0, 0,0.02);
-	 border: 1px solid #177EF5;
+	border: 1px solid #177EF5;
+	background-color: rgba(0, 0, 0,0.02);
 }
