--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -7,13 +7,142 @@
 }
 
 .landing-nav {
+  width: 100%;
+  background-color: rgba(82, 154, 230,1);
+  z-index: 100;
   position: fixed;
   right: 0;
   top: 0;
-  width: 100%;
-  z-index: 100;
-  background-color: rgba(82, 154, 230,1);
   transition: 0.5s ease;
+}
+
+.register {
+  background-color: rgba(82, 154, 237,1);
+  padding: 7% 0 0 20%;
+}
+
+.signin {
+  background-color: rgba(82, 154, 237,1);
+  padding: 7% 0 0 20%;
+}
+
+.landing-welcome-words {
+  margin: 20px;
+}
+
+.landing-welcome-words p {
+  font-size: 35px;
+  font-family: 'Roboto';
+  font-weight: 600;
+  line-height: 40px;
+  letter-spacing: 0.75px;
+  color: rgba(35,35,35,1);
+  margin: 7px 0;
+}
+
+.words-inline {
+  display: flex;
+  align-items: center;
+}
+
+.tripper-white-logo {
+  width: 119px;
+  margin: 2px 0 0 15px;
+}
+
+.landing-form-wrapper {
+  display: flex;
+  flex-direction: column;
+}
+
+.landing-form {
+  margin-top: 3%;
+  padding: 4%;
+  max-width: 400px;
+  height: 100%;
+  border-radius: 22px;
+  border: 0px;
+  background-color: rgba(255, 255, 255, 0.98);
+  box-shadow: 7px 7px 11px 0 rgba(0,0,0, 0.24); 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.landing-form-row {
+  width: 100%;
+}
+
+.landing-form-row-title {
+  font-size: 16px;
+  font-weight: 500;
+  letter-spacing: 1.2px;
+  color: rgba(70,70,70 ,1);
+  margin: 27px 0 7px 0;
+  display: block;
+}
+
+.landing-form-row-input {
+  font-size: 18px;
+  font-weight: 500;
+  color: rgba(40,40,40, 0.9);
+  width: 94%;
+  padding: 3.2% 3%;
+  border: 0px;
+  border-radius: 6px;
+  background-color: rgba(0, 0, 0,0.1);
+}
+
+.landing-form-submit {
+  width: 100%;
+  margin: 50px 0 10px 0;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.landing-input-submit {
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  color: rgba(62,62,62, 0.9);
+  width: 147px;
+  padding: 3.2% 0;
+  border: 0px;
+  border-radius: 21px;
+  background-color: rgba(80, 227, 194,1);
+  box-shadow: 2px 4px 10px 0 rgba(0,0,0, 0.3); 
+  cursor: pointer;
+}
+
+.landing-input-submit:hover {
+  background-color: rgba(15, 202, 160,1);
+}
+
+.landing-form-alarm {
+  width: 100%;
+  margin: 10px 0;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.landing-form-alarm-words {
+  font-size: 15px;
+  font-weight: 400;
+  letter-spacing: 1px;
+  color: rgba(70,70,70 ,1);
+  margin: 0 5px;
+}
+
+.landing-form-alarm-btn {
+  font-size: 16px;
+  font-weight: 600;
+  letter-spacing: 0.1px;
+  color: rgba(73, 199, 170,1);
+  margin: 0 5px;
 }
 
 .web-info-wrapper {
@@ -22,8 +151,8 @@
 }
 
 .web-info {
+  font-size: 13px;
   font-weight: 500;
   color: rgba(62,62,62, 1);
-  font-size: 13px;
   margin: 25px 10px 10px 10px;
 }
