--- a/src/components/Landing/components/Switcher/Switcher.css
+++ b/src/components/Landing/components/Switcher/Switcher.css
@@ -4,19 +4,16 @@
   justify-content: flex-end;
 }
 
-.seperate-line {
-  width: auto;
-  height: 18px;
-  margin: 2px 10px 0 10px;
+.switcher-nav p {
+  font-size: 18px;
+  font-weight: 600;
+  letter-spacing: 1.4px;
+  margin: 0 15px;
+  cursor: pointer;
 }
 
 .switch-on {
-  font-weight: 600;
-  font-size: 18px;
-  letter-spacing: 1.4px;
   color: rgba(255,255,255,1);
-  margin: 0 15px;
-  cursor: pointer;
 }
 
 .switch-on:hover {
@@ -24,14 +21,15 @@
 }
 
 .switch-down {
-  font-weight: 600;
-  font-size: 18px;
-  letter-spacing: 1.4px;
   color: rgba(70,70,70,1);
-  margin: 0 15px;
-  cursor: pointer;
 }
 
 .switch-down:hover {
   color: rgba(70,70,70,0.6);
+}
+
+.seperate-line {
+  width: auto;
+  height: 18px;
+  margin: 2px 10px 0 10px;
 }
