--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,29 +1,34 @@
 .navigation {
+  font-family: 'Roboto';
+  font-weight: 600;
+  letter-spacing: 0.5px;
   padding: 10px 18px;
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-  font-family: 'Roboto';
-  font-weight: 600;
-  letter-spacing: 0.5px;
 }
 
 .navigation button {
   font-size: 15px;
-  color: rgba(62, 62, 62, 1);
   font-family: 'Roboto';
   font-weight: 600;
+  color: rgba(62, 62, 62, 1);
   background-color: #FFF;
-  margin: 0 10px;
-  padding: 6px 10px;
   border: 1px solid #3E3E3E;
   border-radius: 7px;
+  margin: 0 10px;
+  padding: 6px 10px;
   transition: 0s;
 }
 
 .navigation button:hover {
   color: #177EF5;
   border: 1px solid #177EF5;
+}
+
+.navigation button:active {
+  color: #FFF;
+  background-color: #177EF5;
 }
 
 .nav-text-wrapper {
@@ -44,15 +49,13 @@
 }
 
 .nav-user {
-	padding: 0;
-	margin: 0;
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
 }
 
 .nav-user-name {
-  font-size: 16px;
+  font-size: 15px;
   color: rgba(62, 62, 62, 1);
   margin-left: 2px;
 }
@@ -61,5 +64,4 @@
   width: auto;
   height: 15px;
   margin: 0 10px;
-  padding: 0;
 }
