--- a/src/index.css
+++ b/src/index.css
@@ -5,21 +5,22 @@ html, body, #root {
 }
 
 body {
-  margin: 0;
   font-size: 15px;
+  font-weight: 500;
   font-family: -apple-system, BlinkMacSystemFont, "PingFang SC", "Segoe UI",
     Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", 
     "Helvetica Neue", Helvetica, arial, "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  margin: 0;
 }
 
 header {
+  width: 100%;
   z-index: 10001;
   position: fixed;
   left: 0;
   top: 0;
-  width: 100%;
   background-color: #FFF;
   box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.1);
 }
@@ -31,23 +32,28 @@ p {
 ul {
 	list-style: none;
   padding: 0;
+  margin: 0;
 }
 
 button {
-	display: inline-block;
-	border: none;
-	margin: 0;
-	padding: 0;
 	font-size: 15px;
-	cursor: pointer;
+  font-weight: 500;
 	text-align: center;
 	text-decoration: none;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  display: inline-block;
+  cursor: pointer;
 	transition: background 250ms ease-in-out, transform 150ms ease;
 	-webkit-appearance: none;
 	-moz-appearance: none;
 }
 
 input {
+  font-size: 15px;
+  font-weight: 500;
 	outline: none;
 }
 
