--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,3 +1,44 @@
+/*animation css*/
+@keyframes
+  animateleft {
+    from {
+      left: -300px;
+      opacity: 0;
+    } 
+    to {
+      left: 0;
+      opacity: 1;
+    }
+  }
+
+@keyframes
+  leftfadein {
+    from {
+      margin-left: 5px;
+      opacity: 0;
+    }
+    to {
+      margin-left: 15px;
+      opacity: 1;
+    }
+  }
+
+@keyframes
+  upfadein {
+    0% {
+      margin-bottom: 10px;
+      opacity: 0;
+    }
+    25% {
+      margin-bottom: 20px;
+      opacity: 0.75;
+    }
+    100% {
+      margin-bottom: 12px;
+      opacity: 1;
+    }
+  }
+
 /*share css*/
 .hidden {
   display: none;
@@ -16,7 +57,8 @@
   font-family: "Ubuntu";
   color: #3E3E3E;
   text-transform: capitalize;
-  margin: 12px 15px;
+  margin: 0 15px;
+  animation: leftfadein 0.5s ease-in;
 }
 
 /*in SideBar & Accounts*/
@@ -115,12 +157,6 @@
   animation: animateleft 0.4s;
 }
 
-@keyframes 
-  animateleft {
-    from {left:-300px; opacity:0} 
-    to {left:0; opacity:1}
-  }
-
 .side-bar {
   width: 100%;
 }
@@ -160,18 +196,26 @@
   justify-content: space-between;
 }
 
-.accounts-days-manage {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.left-column ,.right-column {
+.accounts-column {
   margin-right: 13px;
   display: flex;
 }
 
-.add-day, .delete-day {
+.show-days {
+  margin: 0 15px;
+  display: flex;
+  align-items: center;
+}
+
+.show-days span {
+  font-weight: 600;
+  font-family: "Ubuntu";
+  color: #3E3E3E;
+  margin-left: 6px;
+  animation: upfadein 0.2s ease-out;
+}
+
+.contorl-day {
   margin: 2px 6px;
   display: flex;
   justify-content: center;
@@ -181,7 +225,6 @@
 .add-btn {
   letter-spacing: 1px;
   color: rgba( 62, 62, 62,0.8);
-  margin-left: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
