--- a/src/containers/App.css
+++ b/src/containers/App.css
@@ -10,3 +10,16 @@
 .dashboard button {
   outline: none;
 }
+
+/*share css*/
+.web-info-wrapper {
+  height: 28px;
+  padding: 25px 20px 18px 20px;
+}
+
+.web-info {
+  font-size: 11px;
+  font-weight: 500;
+  color: rgba(62,62,62, 1);
+  margin: 25px 10px 10px 10px;
+}
