--- a/src/components/Home/components/SideBar/Journey/Journey.css
+++ b/src/components/Home/components/SideBar/Journey/Journey.css
@@ -15,6 +15,8 @@
 	color: #3E3E3E;
 	margin: 0 15px;
 	padding: 2px 0 2px 10px;
+	text-align: left;
+	max-width: 182px;
 }
 
 .change-display-journey-btn:hover {
@@ -40,7 +42,7 @@
 }
 
 .journey-btn-group .update-btn {
-	margin-right: 8px;
+	margin-right: 12px;
 }
 
 .journey-btn-group .cancel-btn {
