--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -2,13 +2,13 @@
   margin: 0;
   width: 100%;
   height: 100%;
-  padding-bottom: 20%;
+  padding-bottom: 10%;
   background-color: rgba(82, 154, 237,1);
 }
 
 .landing-nav {
   width: 100%;
-  background-color: rgba(82, 154, 230,1);
+  background-color: rgba(82, 154, 237,1);
   z-index: 100;
   position: fixed;
   right: 0;
@@ -18,12 +18,16 @@
 
 .register {
   background-color: rgba(82, 154, 237,1);
-  padding: 7% 0 0 20%;
+  padding-top: 7%;
 }
 
 .signin {
   background-color: rgba(82, 154, 237,1);
-  padding: 7% 0 0 20%;
+  padding-top: 7%;
+}
+
+.landing-welcome-words-wrapper {
+  padding-left: 22%;
 }
 
 .landing-welcome-words {
@@ -32,7 +36,6 @@
 
 .landing-welcome-words p {
   font-size: 35px;
-  font-family: 'Roboto';
   font-weight: 600;
   line-height: 40px;
   letter-spacing: 0.75px;
@@ -47,21 +50,20 @@
 
 .tripper-white-logo {
   width: 119px;
-  margin: 2px 0 0 15px;
+  margin: 6px 0 0 15px;
 }
 
 .landing-form-wrapper {
-  display: flex;
-  flex-direction: column;
+  margin-top: 3%;
+  padding-left: 25%;
 }
 
 .landing-form {
-  margin-top: 3%;
-  padding: 4%;
+  padding: 28px;
   max-width: 400px;
   height: 100%;
   border-radius: 22px;
-  border: 0px;
+  border: 0;
   background-color: rgba(255, 255, 255, 0.98);
   box-shadow: 7px 7px 11px 0 rgba(0,0,0, 0.24); 
   display: flex;
@@ -78,7 +80,7 @@
   font-weight: 500;
   letter-spacing: 1.2px;
   color: rgba(70,70,70 ,1);
-  margin: 27px 0 7px 0;
+  margin: 25px 0 7px 7px;
   display: block;
 }
 
@@ -88,14 +90,14 @@
   color: rgba(40,40,40, 0.9);
   width: 94%;
   padding: 3.2% 3%;
-  border: 0px;
-  border-radius: 6px;
+  border: 0;
+  border-radius: 8px;
   background-color: rgba(0, 0, 0,0.1);
 }
 
 .landing-form-submit {
   width: 100%;
-  margin: 50px 0 10px 0;
+  margin: 46px 0 10px 0;
   text-align: right;
   display: flex;
   justify-content: flex-end;
@@ -112,7 +114,7 @@
   border: 0px;
   border-radius: 21px;
   background-color: rgba(80, 227, 194,1);
-  box-shadow: 2px 4px 10px 0 rgba(0,0,0, 0.3); 
+  box-shadow: 2px 4px 4px 0 rgba(0,0,0, 0.1); 
   cursor: pointer;
 }
 
