--- a/src/containers/rwd.css
+++ b/src/containers/rwd.css
@@ -1,47 +1,58 @@
 /*This file consists of two parts: 'Landing' and 'Home & Navigation'*/
 /*Landing*/
-@media screen and (max-width: 1259px) {
+
+@media screen and (max-width: 1025px) {
   .switcher-nav {
-    margin: 4%;
+    margin: 30px;
   }
 
-  .landing {
+  .signin, .register {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .landing-welcome-words-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding: 0;
-  }
-
-  .signin, .register {
     margin-top: 50px;
-  }
-}
-
-@media screen and (max-width: 767px) {
-  .switcher-nav {
-    margin: 6%;
-  }
-
-  .signin, .register {
-    padding: 10% 0 0 12%;
   }
 
   .landing-welcome-words {
-    margin-bottom: 10%;
     width: 80%;
+    max-width: 500px;
+    margin: 0;
+  }
+
+  .landing-welcome-words p {
+    line-height: 50px;
+    margin: 0;
+  }
+
+  .landing-form-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    padding: 0;
   }
 
   .landing-form {
-    margin-top: 5%;
     width: 80%;
+    min-width: 400px;
   }
 }
 
-@media screen and (max-width: 547px) {
-  .landing {
-    padding-bottom: 20%;
+@media screen and (max-width: 415px) {
+  .switcher-nav {
+    margin: 20px;
   }
 
-  .switch-on, .switch-down {
-    font-size: 16px;
-    margin: 0 10px;
+  .switcher-nav p {
+    font-size: 15px;
+    margin: 2px 10px 0 10px;
   }
 
   .signin, .register {
@@ -49,18 +60,23 @@
   }
 
   .landing-welcome-words p {
-    line-height: 32px;
     font-size: 28px;
+    line-height: 36px;
     letter-spacing: 0.5px;
+    margin: 0;
   }
 
   .tripper-white-logo {
     width: 90px;
   }
 
+  .landing-form-wrapper {
+    padding-bottom: 40px;
+  }
+
   .landing-form {
-    margin-top: 28px;
-    max-width: 380px;
+    width: 65%;
+    min-width: 280px;
   }
 
   .landing-form-row-title {
@@ -78,28 +94,27 @@
   }
 }
 
-@media screen and (max-width: 370px) {
-  .signin, .register {
-    padding: 30px 0 0 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
+@media screen and (max-width: 321px) {
   .landing-form {
-    margin-top: 10px;
-    padding: 20px;
-    width: 280px;
+    padding: 26px 16px;
+    min-width: 250px;
+    border-radius: 18px;
   }
 
   .landing-form-row-title {
-    font-size: 16px;
-    letter-spacing: 0.2px;
+    font-size: 15px;
+    margin-top: 10px;
   }
 
   .landing-form-alarm {
     flex-direction: column;
     align-items: flex-end;
+  }
+
+  .web-vital-info {
+    margin: 16px 10px 10px 10px;
+    line-height: 16px;
+    letter-spacing: 0;
   }
 }
 
@@ -183,7 +198,7 @@
   }
 }
 
-@media screen and (max-width: 1047px)  {
+@media screen and (max-width: 1047px) {
   .main-section {
     margin-top: 65px;
   }
