--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,19 @@ html, body, #root {
   width: 100%;
 }
 
+html, body, div, span, p, nav, label, ul, li, img {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+nav {
+  display: block;
+}
+
 body {
   font-size: 15px;
   font-weight: 500;
@@ -12,7 +25,7 @@ body {
     "Helvetica Neue", Helvetica, arial, "sans-serif";
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  margin: 0;
+  line-height: 1;
 }
 
 header {
@@ -23,16 +36,11 @@ header {
   top: 0;
   background-color: #FFF;
   box-shadow: 0 4px 8px 0 rgba(0,0,0, 0.1);
-}
-
-p {
-	margin: 0;
+  display: block;
 }
 
 ul {
 	list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 button {
@@ -55,4 +63,6 @@ input {
   font-size: 15px;
   font-weight: 500;
 	outline: none;
+  -webkit-appearance: none;
+  border-radius: 0;
 }
